🔨🛎 Checkpoint ./script.js:39955708/187 ./index.html:39955708/315

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     }
     canvas {
       position: absolute;
+      margin:auto;
+      left:0;
+      right:0;
+      bottom: 0;
+      top: 0;
     }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
 </head>
 <body>
-  <canvas id = "game_canvas">
+  <canvas id = "game_canvas" width = "1280" height = "720">
   </canvas>
   <script src = "script.js">
   </script>
