--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: blue;
+      background-color: black;
     }
     canvas {
       position: absolute;
@@ -21,7 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
 </head>
 <body>
-  <canvas id = "game_canvas" width = "1280" height = "720">
+  <canvas id = "game_canvas" width = "960" height = "540">
   </canvas>
   <script src = "script.js">
   </script>
