⛷🍈 Checkpoint ./script.js:39955708/234 ./index.html:39955708/42

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: black;
+      background-color: #405080;
     }
     canvas {
       position: absolute;
