👁🏂 Checkpoint ./i_found_this_on_wikipedia.js:39955708/59794 ./index.html:39955708/37

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 <body>
   <canvas id = "game_canvas" width = "1120" height = "630"> <!-->this is not a standard hd resolution, but it is just in between 540p and 720p</-->
   </canvas>
-  <script src = "script.js">
+  <script src = "i_found_this_on_wikipedia.js">
   </script>
 </body>
