--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
       top: 0;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
+  <script type = "module" src = "main.js" defer>
+  </script>
 </head>
 <body>
   <canvas id = "game_canvas" width = "1120" height = "630"> <!-->this is not a standard hd resolution, but it is just in between 540p and 720p</-->
   </canvas>
-  <script src = "main.js">
+  <script src="old_script.js">
   </script>
 </body>
