⚾️🐡 Checkpoint ./scene.js:39955708/441 ./index.html:39955708/83

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
   <script src="pre.js">
   </script>
-  <!--script src="main.js" type="module">
-  </script-->
+  <script src="main.js" type="module">
+  </script>
 </head>
 <body>
   <canvas id = "game_canvas" width = "1120" height = "630"> <!-->this is not a standard hd resolution, but it is just in between 540p and 720p</-->
   </canvas>
-  <script src="old_script.js">
-  </script>
+  <!--<script src="old_script.js"></script>-->
 </body>
