--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
-  <script src="pre.js">
-  </script>
-  <script src="main.js" type="module">
+  <script src="main.js" type="module" defer>
   </script>
 </head>
 <body>
