🏑🐯 Checkpoint ./game.js:39955708/501 ./index.html:39955708/24 ./main.js:39955708/140 ./game_player.js:39955708/128

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </script>
 </head>
 <body>
+  <input type = "file">
   <canvas id = "game_canvas" width = "1120" height = "630"> <!-->this is not a standard hd resolution, but it is just in between 540p and 720p</-->
   </canvas>
   <!--<script src="old_script.js"></script>-->
