👌👦 Checkpoint ./index.html:39955708/109

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <input type = "file">
-  <canvas id = "game_canvas" width = "160" height = "90"> <!--this is not a standard hd resolution, but it is just in between 540p and 720p-->
+  <canvas id = "game_canvas" width = "1280" height = "720">
   </canvas>
   <!--script src="old_script.js"></script-->
 </body>
