🚟🌌 Checkpoint ./scene.js:39955708/14 ./orbee.js:39955708/748 ./index.html:39955708/41 ./constants.js:39955708/37

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       top: 0;
     }
   </style>
+  <script src="pre.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
   <script src="main.js" type="module" defer>
   </script>
