🙎🙉 Checkpoint ./constants.js:39955708/155 ./orbee.js:39955708/420 ./index.html:39955708/205

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <body>
   <canvas id = "game_canvas" width = "1280" height = "720">
   </canvas>
+  oh no ther was an orbeaz spile
   <!--script src="old_script.js"></script-->
 </body>
