🎓💿 Checkpoint ./index.html:39955708/210 ./main.js:39955708/86 ./game.js:39955708/381 ./graph_displayer.js:39955708/522

--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
   </title>
   <style>
     body {
-      margin: 0;
+      margin: 10px;
       overflow: hidden;
       background-color: #405080;
+      text-align: center;
     }
     #game_canvas {
-      position: absolute;
+      /*position: absolute;*/
       margin:auto;
       left:0;
       right:0;
-      bottom: 0;
-      top: 0;
+      /*bottom: 0;
+      top: 0;*/
     }
     #perf_canvas {
-      text-align:center;
+      /*position: absolute;*/
+      margin:auto;
+      left:0;
+      right:0;
+      /*top: 0;*/
     }
   </style>
   <script src="pre.js"></script>
