🍶🎈 Checkpoint ./graph_displayer.js:39955708/295 ./game.js:39955708/40 ./constants.js:39955708/6 ./index.html:39955708/65

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       margin:auto;
       left:0;
       right:0;
+      backgri
       /*top: 0;*/
     }
   </style>
@@ -34,7 +35,7 @@
 <body>
   <canvas id = "game_canvas" width = "960" height = "540">
   </canvas>
-  <canvas id = "perf_canvas" width = "960" height = "180" style = "background-color:red;">
+  <canvas id = "perf_canvas" width = "960" height = "180">
   </canvas>
   <p>
   oh no ther was an orbeaz spile
