🚠🦄 Checkpoint ./index.html:39955708/19 ./constants.js:39955708/8 ./graph_displayer.js:39955708/115

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       margin:auto;
       left:0;
       right:0;
-      backgri
+      background-color: grey;
       /*top: 0;*/
     }
   </style>
