🚈⛴ Checkpoint ./index.html:39955708/18 ./main.js:39955708/1292

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       background-color: #405080;
       text-align: center;
     }
-    #game_canvas {
+    canvas {
       /*position: absolute;*/
       margin:auto;
       left:0;
@@ -33,9 +33,9 @@
   </script>
 </head>
 <body>
-  <canvas id = "game_canvas" width = "1280" height = "720">
-  </canvas>
-  <canvas id = "perf_canvas" width = "960" height = "180">
+  <!--canvas id = "game_canvas" width = "1280" height = "720">
+  </canvas-->
+  <canvas id = "perf_canvas" width = "960" height = "60">
   </canvas>
   <p>
   oh no ther was an orbeaz spile
