--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       background-color: grey;
       /*top: 0;*/
     }
+    p {
+      margin: 0;
+      color: white;
+    }
   </style>
   <script src="pre.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
