🏗😂 Checkpoint ./index.html:39955708/125 ./scene.js:39955708/451

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
   <p>
   oh no ther was an orbeaz spile
   </p>
+  <img src="https://cdn.glitch.global/e7cbcc0a-13a1-4d09-b0ab-538eef5ec805/pug_again.jpg?v=1681751131676">
   <!--script src="old_script.js"></script-->
 </body>
