--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
       overflow: hidden;
       background-color: #405080;
       text-align: center;
+      filter: blur(2px);
+      transform: scale(1, .1);
     }
     canvas {
       /*position: absolute;*/
       margin:auto;
       left:0;
       right:0;
+      
+      transform: scale(1, 10);
+      
       /*bottom: 0;
       top: 0;*/
     }
