🎲🚠 Checkpoint ./octree.js:39955708/5 ./constants.js:39955708/9 ./game.js:39955708/177 ./object-group-vshader.glsl:39955708/7 ./index.html:42828721/133

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       margin: 0;
       color: white;
     }
+    #step-button {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      font-size: 36px;
+    }
   </style>
   <script src="pre.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
