🔑🚧 Checkpoint ./main.js:42828721/971 ./index.html:42828721/67 ./game.js:42828721/129

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       bottom: 0;
       right: 0;
       font-size: 36px;
+      color: white;
+      background-color: #4444cc;
     }
   </style>
   <script src="pre.js"></script>
