index page refactor

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </style>
   <script src="pre.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
-  <script src="main.js" type="module" defer>
-  </script>
+  <script src="main.js" type="module" defer></script>
+  <script src="webgpu.js" type="module" defer></script>
 </head>
 <body>
   <!--canvas id = "game_canvas" width = "1280" height = "720">
@@ -57,5 +57,4 @@
   <b>
   </b> <br>
   <!--script src="old_script.js"></script-->
-  <script src="webgpu.js"></script>
 </body>
