physics are nominally complete, totally untested

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </canvas-->
   <canvas id="perf_canvas" width="960" height="60">
   </canvas>
-  <p>
+  <p id="fps_counter">
   oh no ther was an orbeaz spile
   </p>
   
